	PR middle-end/35149 	* ipa.c (cgraph_remove_unreachable_nodes): Clear local.inlinable flag.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@132337 138bc75d-0d04-0410-961f-82ee72b054a4